syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.luiz";
option java_outer_classname = "KeymanagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.luiz;

service KeyManagerRegistraGrpcService {
  rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

//Enum para o tipo de chave a ser cadastrado
//UNKNOWN é para não deixarmos o default como algum tipo valido do nosso sistema
enum TipoDeChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF                = 1;
  CELULAR            = 2;
  EMAIL              = 3;
  ALEATORIA          = 4;
}

//Enum para o tipo de conta a ser
//UNKNOWN é para não deixarmos o default como algum tipo valido do nosso sistema
enum TipoDeConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE     = 1;
  CONTA_POUPANCA     = 2;
}

//Requisitos para registrar uma chave pix
message RegistraChavePixRequest {
  string clienteId        = 1;
  TipoDeChave tipoDeChave = 2;
  string chave            = 3;
  TipoDeConta tipoDeConta = 4;
}

//resposta que deve ser retornado pelo sistema
message RegistraChavePixResponse {
  string clienteId = 1;
  string pixId     = 2;
}